# HUAJIANG

./: README.md
algorithm-body_pose_detect/: CMakeLists.txt
algorithm-car_detect/: CMakeLists.txt
algorithm-face_detect/: CMakeLists.txt
algorithm-face_landmark98/: CMakeLists.txt
algorithm-face_mask_judgement/: CMakeLists.txt
algorithm-face_pose_estimation/: CMakeLists.txt
algorithm-face_recognition/: CMakeLists.txt
algorithm-fire_detect/: CMakeLists.txt
algorithm-geometry/: CMakeLists.txt
algorithm-helmet_detect/: CMakeLists.txt
algorithm-moving_detect/: CMakeLists.txt
algorithm-person_detect/: CMakeLists.txt
algorithm-phonecall_detect/: CMakeLists.txt
algorithm-qrdecode/: CMakeLists.txt
algorithm-self_learning/: CMakeLists.txt
algorithm-smoke_detect/: CMakeLists.txt
common-QRCode/: CMakeLists.txt
common-base64/: CMakeLists.txt
common-data_check/: CMakeLists.txt
common-file_opt/: CMakeLists.txt
common-font_engine/: CMakeLists.txt
common-iniWrapper/: CMakeLists.txt
common-ipc/: CMakeLists.txt
common-json_parser/: CMakeLists.txt
common-string_opt/: CMakeLists.txt
common-system_opt/: CMakeLists.txt
media-endeCode_api/: CMakeLists.txt  test-videoEnCode_api.c
netProtocol-https/: CMakeLists.txt
netProtocol-mqtt/: CMakeLists.txt
netProtocol-rtsp/: CMakeLists.txt
peripheral-audio/: CMakeLists.txt
peripheral-backlight/: CMakeLists.txt
peripheral-camera/: CMakeLists.txt
peripheral-can/: CMakeLists.txt
peripheral-disp-cam/: CMakeLists.txt  (+1 more)
peripheral-serialport/: CMakeLists.txt  test-serial-port.c  uart.h
(+11 files in other folders)
